--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bulma": "^0.9.0",
+    "node-sass": "^4.14.1",
+    "npm": "^6.14.6",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "start": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
